[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-modules"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.1",
    "numpy>=1.26.4",
    "matplotlib>=3.10.5",
    "mplcursors>=0.5",
    "seaborn>=0.13.2",
    "plotly>=5.0.0",
    "statsmodels>=0.14.0",
    "scipy>=1.15.2",
    "FlowCytometryTools>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_modules*"]